# Robotics

./: .gitignore  README.md  info.txt
First_Project/: CMakeLists.txt  package.xml
First_Project/cfg/: dyn_conf_third_node.cfg  rviz_config.rviz
First_Project/launch/: launch.launch
First_Project/src/: gps_to_odom.cpp  gps_to_odom_old.cpp  lidar_remap.cpp  odom_to_tf.cpp
second_project/: CMakeLists.txt  README.txt  package.xml  rviz_config.rviz
second_project/betti/: modified_map.pgm  take1.pgm  take2.pgm  take2.yaml  take3.pgm  take3.yaml  take5.pgm  take5.yaml
second_project/betti_slammy/: take1.pgm  take1.yaml  take2.yaml  take3.yaml
second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapper_params_online_async_default.yaml  move_base_params.yaml  rviz_config.rviz
second_project/csv/: waypoints.csv
second_project/launch/: amcl.launch  first_task.launch  gmapping.launch  launch.launch  second_task.launch  slam_toolbox_default.launch  toolbox.launch
second_project/maps/: map.pgm  map.yaml
second_project/maps/stage/: maze.world  robot.inc
second_project/maps_betti/: map_take_1.pgm  map_take_2.pgm  map_take_3.pgm
second_project/rviz/: robot_mapping.rviz  robot_navigation.rviz
second_project/src/: csv_goal_publisher.cpp  pointcloud_to_laserscan.cpp  ugv_odom_to_tf.cpp
second_project/stage/: maze.world
